# skrisk

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/architecture/: risk-and-intel-model.md  skills-sh-discovery-and-crawl.md
docs/discussions/: 2026-03-06-kickoff.md  2026-03-06-threat-intel-vendors.md  2026-03-07-skills-sh-crawl-findings.md  2026-03-08-skillsmp-integration.md  2026-03-09-skillsmp-live-rollout.md  2026-03-10-anthropics-false-positive-review.md  2026-03-10-dashboard-performance-and-accuracy.md  2026-03-10-domain-extraction-hardening.md  2026-03-10-scoring-accuracy-verification.md  2026-03-11-exfil-evidence-example-review.md  2026-03-11-implementation-status.md
docs/plans/: 2026-03-06-intel-enrichment-design.md  2026-03-06-skrisk-v1.md  (+25 more)
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
tests/: test_abusech_collectors.py  test_analysis.py  test_analysis_spool.py  test_api.py  test_api_intel.py  test_cli.py  test_cli_repo_analysis.py  test_collectors.py  test_config.py  test_config_infra.py  test_dashboard.py  test_database_runtime.py  test_db_migrate.py  test_graph_bulk.py  test_graph_project.py  test_impact.py  test_indicator_linking.py  test_infrastructure_collectors.py  test_infrastructure_enrichment.py  test_ingestion.py  test_intel_repository.py  test_intel_sync.py  test_policy.py  test_registry_observations.py  test_registry_sources.py  test_regressions.py  test_repo_analysis.py  test_search_index.py  test_skillsmp_collector.py  test_skillsmp_discovery.py  test_sync_service.py  test_virustotal.py
(+66 files in other folders)
